# auf

./: .gitignore  LICENSE  LICENSE.txt  MANIFEST.in  README.md  pyproject.toml
auf/: __init__.py
auf/constants/: __init__.py  metrics.py  numbers.py
auf/data/: __init__.py  checks.py  preprocessing.py  split.py
auf/feature_rankers/: __init__.py  filter.py  importance.py  permutation.py  stepwise.py  straightforward.py
auf/log/: __init__.py  log.py
auf/metrics/: __init__.py  averaged.py  by_top.py  overfit.py
auf/ml_flow/: __init__.py  ml_flow.py
auf/models/: __init__.py  auf_forest.py  auf_model.py  auf_tree.py  auf_x_learner.py
auf/pipeline/: __init__.py  calibration.py  evaluation.py  inference.py  pipeline.py
auf/plots/: __init__.py  plots.py
auf/training/: __init__.py  fitting.py  gridsearch.py  model_generation.py
examples/: binary_treatment_megafon.ipynb  multitreatment_synthetic.ipynb
