[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "auf"
version = "2.0.1"
description = "AUF — Auto Uplift Framework"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE.txt" }

dependencies = [
    "pip>=20",
    "scikit-learn>=1.3.0,<1.5.0",
    "scikit-uplift==0.5.1",
    "mlflow==2.9.2",
    "scipy==1.10.0",
    "causalml==0.15.2", # 0.16.0 is needed
    "seaborn==0.13.2",
    "matplotlib==3.6.3",
    "matplotlib-inline==0.1.6",
    "pandas>=2.0.0",
    "optuna==4.5.0",
    "catboost==1.2.5",
    "numpy==1.23.4", # was >=1.23.4,<1.29
    "duecredit==0.10.2"
]

[project.optional-dependencies]
dev = [
    "black==23.7.0",
    "isort==5.12.0",
    "flake8==6.0.0",
    "flake8-docstrings==1.7.0",
    "docformatter==1.7.5",
    "pre-commit==3.3.3",
    "pre-commit-hooks==4.4.0",
    "mypy"
]

[tool.setuptools]
packages = ["auf"]

[tool.setuptools.package-data]
"auf" = ["*"]

[tool.black]
line-length = 80
target-version = ['py38', 'py39', 'py310']
extend-exclude = "tests"

[tool.isort]
profile = "black"
line_length = 80
skip_glob = ["tests"]

# [tool.mypy]
# strict = true
# exclude = ["tests"]

[tool.docformatter]
wrap-summaries = 80
wrap-descriptions = 80
# pre-summary-newline = true
make-summary-multi-line = true
